# cv_builder_automation

./: .env.example  .gitignore  AI_CV_PROCESSING_SYSTEM_FINAL.md  AI_CV_PROCESSING_SYSTEM_FINAL_COMPLETE.md  AI_CV_SYSTEM_CONFIGURATION_COMPLETE.md  CLIENT_HANDOFF.md  CV_UPLOAD_FIX.md  CV_WORKFLOW_DOCUMENTATION.md  CV_WORKFLOW_IMPLEMENTATION.md  FINAL_FIX_INSTRUCTIONS.md  IMPLEMENTATION_LANGSMITH_METRICS.md  IMPLEMENTATION_SUMMARY.md  LANGSMITH_IMPLEMENTATION_SUMMARY.md  LANGSMITH_METRICS_FIX.md  LLM_EXTRACTION_IMPLEMENTATION.md  Lokesh  Makefile  PERSISTENCE_CHECKLIST.md  PRIMARY_SKILLS_FIX_COMPLETE.md  PROFESSIONAL_SUMMARY_VERIFICATION.md  READ.md  README.md  README_NEXT_STEPS.md  SKILLS_EXTRACTION_COMPLETE_FIX.md  STRUCTURED_PREVIEW_FIX.md  TRANSCRIPT_CV_EXTRACTION_VERIFICATION.md  __init__.py  alembic.ini  check_duplicates.py  complete_ai_workflow_results.json  copy_cv_to_local.bat  debug_education_extraction.py  debug_extraction.py  debug_text_format.py  extracted_text.txt  final_extraction_results.json  pyproject.toml  ramesh_cv_test_results.json  restart_server.bat  run.py  (+22 more)
apps/api/: main.py  (+1 more)
demo-ui/: app.js  index.html  preview-renderer-test.html  preview-renderer-test.js  styles.css
docs/: CV_TEMPLATE_BEST_PRACTICES_2026.md  architecture.md  others_contract_migration_plan.md  project_langgraph_langsmith_overview.txt  session_persistence_guide.md  session_persistence_schema.sql
log/: e2e_export_e2e-40246707.docx  live_preview_check.json  live_preview_check_with_country.json  live_preview_check_with_country_after_fix.json  live_preview_no_loss_final_check.json  (+3 more)
(+354 files in other folders)
